fixed minor input alignment issue

--- a/controls/controls/input/input.less
+++ b/controls/controls/input/input.less
@@ -89,6 +89,7 @@
                 height: 1.2em;
                 text-align: center;
                 vertical-align: bottom;
+                line-height: 1.2em;
                 border: 1px solid @action-color;
                 .border-radius(1.2em);
 
